Bug 411836 - Folder settings for expired message stores bad values (maildir)
Summary: Folder settings for expired message stores bad values (maildir)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 5.12.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-11 22:57 UTC by Friedrich W. H. Kossebau
Modified: 2019-09-12 11:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Friedrich W. H. Kossebau 2019-09-11 22:57:53 UTC
SUMMARY
Some values of the settings for the handling of expired messages seem to be wrongly displayed in the folder properties dialog (only tested with maildir one), and then written out as such on next save of settings. See with "Deadline for unread" & "Move expired messages to:" (?, German UI right now).

STEPS TO REPRODUCE
1. Open folder properties dialog, tab "Expired" (?)
2. Enable "Deadline for unread"(?) checkbox, enter "14 days"
3. Select "Move expired messages to:" (?), select trash folder
4. Click "Ok" to close the dialog.
5. Reopen the dialog, same tab

OBSERVED RESULT
* entry for deadline of unread turned to "22044 days"
* folder for expired messages turned to blank

EXPECTED RESULT
* entry for deadline as entered before, "30 days"
* folder for expired messages as entered before, the trash folder
Comment 1 Laurent Montel 2019-09-12 06:02:25 UTC
I confirm it.
I will investigate it soon
Comment 2 Laurent Montel 2019-09-12 11:42:51 UTC
Git commit 32245181b742729af8f2027704eb70dddadf0302 by Laurent Montel.
Committed on 12/09/2019 at 11:42.
Pushed by mlaurent into branch 'Applications/19.08'.

Fix Bug 411836 - Folder settings for expired message stores bad values (maildir)

FIXED-IN: 5.12.2

M  +21   -9    src/collectionpage/attributes/expirecollectionattribute.cpp
M  +10   -8    src/collectionpage/attributes/expirecollectionattribute.h
M  +31   -34   src/collectionpage/collectionexpirypage.cpp
M  +8    -13   src/folder/foldercollectionmonitor.cpp
M  +86   -97   src/job/expirejob.cpp
M  +0    -29   src/util/mailutil.cpp
M  +0    -1    src/util/mailutil.h

https://commits.kde.org/mailcommon/32245181b742729af8f2027704eb70dddadf0302
Comment 3 Laurent Montel 2019-09-12 11:45:02 UTC
Git commit 875a00a4ad3d6bd8a83ff665328987f487cdcafb by Laurent Montel.
Committed on 12/09/2019 at 11:44.
Pushed by mlaurent into branch 'Applications/19.08'.

FIX Bug 411836 - Folder settings for expired message stores bad values (maildir)
FIXED-IN: 5.12.2

M  +1    -1    CMakeLists.txt
M  +22   -30   src/kmmainwidget.cpp

https://commits.kde.org/kmail/875a00a4ad3d6bd8a83ff665328987f487cdcafb