Fix Bug 411836 - Folder settings for expired message stores bad values (maildir)

FIXED-IN: 5.12.2
BUG: 411836